--- a/css/main.css
+++ b/css/main.css
@@ -852,6 +852,18 @@ img {
     padding-top: 64px;
     padding-bottom: 64px;
   }
+  .why-items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 @media only screen and (max-width: 580px) {
@@ -1042,5 +1054,199 @@ img {
 .footer-section {
   padding-top: 48px;
   padding-bottom: 48px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__sites-logos {
+  width: 155px;
+  margin-right: 145px;
+}
+
+.site-logo-white {
+  display: block;
+  width: 139px;
+  height: 20px;
+  margin-bottom: 55px;
+}
+
+.sites-list {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 0;
+}
+
+.footer-svg {
+  width: 20px;
+  height: 20px;
+}
+
+.footer-fill:hover {
+  fill: #30C88F;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.footer-list {
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+}
+
+.footer-info1 {
+  margin-right: 120px;
+}
+
+.info-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.info-items {
+  margin-bottom: 10px;
+}
+
+.info-link {
+  text-decoration: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.234375px;
+  color: #FFFFFF;
+}
+
+.info-link:hover {
+  color: #30C88F;
+}
+
+.footer-end {
+  margin-left: auto;
+}
+
+.reserved {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 26px;
+  text-align: right;
+  letter-spacing: -0.234375px;
+  color: #FFFFFF;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+  margin: 0;
+  margin-top: 24px;
+}
+
+.footer-info ~ .footer-info {
+  margin-left: 30px;
+}
+
+.footer-info {
+  width: 200px;
+}
+
+@media only screen and (max-width: 980px) {
+  .footer-section {
+    padding-top: 48px;
+    padding-bottom: 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer__sites-logos {
+    margin-right: 0px;
+  }
+  .footer-info {
+    width: 150px;
+  }
+  .footer-end {
+    margin-left: 0;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .footer-info {
+    width: 100px;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .footer-section {
+    padding-top: 48px;
+    padding-bottom: 48px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    align-items: center;
+  }
+  .footer__sites-logos {
+    margin-right: 0px;
+  }
+  .footer-info ~ .footer-info {
+    margin-left: 30px;
+  }
+  .footer-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 200px;
+  }
+  .footer-end {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 /*# sourceMappingURL=main.css.map */
