--- a/scss/blocks/_why-section.scss
+++ b/scss/blocks/_why-section.scss
@@ -93,6 +93,12 @@
     padding-top: 64px;
     padding-bottom: 64px;
   }
+
+  .why-items{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
 }
 
 @include breakpoint-down(580px) {
@@ -150,4 +156,5 @@
     padding-top: 28px;
     padding-bottom: 28px;
   }
+  
 }
