--- a/scss/blocks/_articles-section.scss
+++ b/scss/blocks/_articles-section.scss
@@ -68,6 +68,10 @@
   width: 207px;
 }
 
+.article__name:hover {
+  color: #30c88f;
+}
+
 .article__text {
   font-style: normal;
   font-weight: normal;
