--- a/css/main.css
+++ b/css/main.css
@@ -988,6 +988,10 @@ img {
   width: 207px;
 }
 
+.article__name:hover {
+  color: #30c88f;
+}
+
 .article__text {
   font-style: normal;
   font-weight: normal;
